2003-11-15 16:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewWithContectViewEditor.m: Added methods 
	_shouldBeVertical and _sortByPosition:isVertical: and 
	enhanced the groupSelectionInSplitView method to allow 
	positional orientation of the splitview.  The user should
	now expect the splitview to be built based on the relative 
	position of the views in the window being edited.  This fix 
	addresses Report/Bug #5253.
	
2003-11-12 00:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewEditor.m: Removed extra RELEASE which was causing
	a segfault.

2003-11-11 17:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormNSSplitViewInspector.[hm]: Added implementation
	* GormNSSplitViewInspector.gorm: Added interface.
	* Gorm.m: Updated application:openFile: method.
	
2003-11-08 17:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [_identifierString:] corrected issue which
	was causing a segmentation fault.

2003-11-01 20:35 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: -ok: method.  Removed check which was
	preventing connection to NSFirst.

2003-10-28 12:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormBoxEditor.m: Removed commented out code.
	* GormControlEditor.m: same
	* GormCustomView.m: same
	* GormFintViewController.m: same
	* GormGenericEditor.m: same
	* GormImageEditor.m: same
	* GormSoundEditor.m: same
	* GormInternalViewEditor.m: same
	* GormObjectEditor.m: same
	* GormMatrixEditor.m: same
	* GormSplitViewEditor.m: same
	* GormViewEditor.m: same	
	* GormViewWithContentViewEditor.m: same	
	* GormViewWithSubviewsEditor.m: same	
	* GormInspectorsManager.m: minor cleanup.	
	* GormDocument.m: [GormDocument _selectClass:] removed extra, 
	uneeded RETAIN.  [GormDocument detachObject:] RELEASE the 
	object when after it's detached from the document.  
	[GormDocument _indentifierString:] removed extra RETAIN calls.